--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           node-version: "14"
 
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run server
+        run: node server.js &
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
